# cdisc-proxy

./: .gitignore  ARCHITECTURE.md  Benchmarks.md  Cargo.toml  LICENCE  README  README.md  SETUP_GUIDE.md  cdisc-proxy.conf.example  cdisc_proxy.vcl  go.mod  go.sum  main.go  setup_script.sh  test_persistence.sh
.github/workflows/: build.yml
src/: cache_key.rs  lib.rs  main.rs
tests/: singleflight.rs
