[package]
name = "cdisc-cache-invalidator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true